Fix post link overflow

--- a/site/src/components/elements/index.css
+++ b/site/src/components/elements/index.css
@@ -164,6 +164,10 @@ li > p {
   margin-bottom: var(--space-sm);
 }
 
+li > a {
+  word-break: break-all;
+}
+
 br {
   margin: var(--space-md) 0;
 }
